--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "0.0.1",
   "devDependencies": {
     "grunt": "~0.4.0",
-    "grunt-contrib-sass": "~0.4.x",
-    "grunt-sass": "~0.6.0",
-    "grunt-contrib-watch": "~0.4.4"
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-contrib-sass": "^0.7.3"
   },
   "engines": {
     "node": ">=0.10.0"
